compiler.old/tests/compiler/must_fail/t_17.rs.exp.err
tests/compiler/must_fail/t_17.rs:12:9: 12:14 error: wrong number of arguments: got 1, expected 0
        bar(x);
        ^^^^^^
